# pywindsurf

./: .gitignore  README.md  pyproject.toml  pywindsurf.py  pywindsurf_gui.py  requirements.txt  tcx_analyzer.py
pywindsurf/: __init__.py  __main__.py  pywindsurf.py  pywindsurf_gui.py
