[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywindsurf"
version = "0.1.0"
description = "Analyze TCX GPS data for water sports (windsurfing, sailing, etc.) with NiceGUI dashboard"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "nicegui>=1.3.0",
    "folium>=0.12.0",
    "fastapi",
]

[project.scripts]
pywindsurf = "pywindsurf.pywindsurf:main"
pywindsurf-gui = "pywindsurf.pywindsurf_gui:main"

[tool.setuptools]
packages = ["pywindsurf"]
